@@ -1,3 +1,4 @@
+	* web seed fixes (better support for torrents without trailing / in web seeds)
 	* fix some issues with SSL over uTP connections
 	* fix UDP trackers trying all endpoints behind the hostname
 
